--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,9 +108,9 @@ jobs:
       - 
         uses: actions/checkout@v2
 
-      # set env variables according to os/compiler/build etc.
+      # init install path and llvm version tag
       -
-        name: "init some environment variables"
+        name: "init libcxx env variables"
         if: matrix.cfg.libcxx
         id: init
         shell: bash
