add cards, gamestate (#7)
add gamestate, game - incomplete
update CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,24 +15,22 @@ endif()
 
 # configuration for dev, only executes if this is the main project
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-
     set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-
 endif()
 
 
 # base library, header only
-add_library(mkpoker-base INTERFACE)
-add_library(mkpoker::base ALIAS mkpoker-base)
-target_include_directories(mkpoker-base INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
-target_include_directories(mkpoker-base SYSTEM INTERFACE $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include>)
-target_compile_features(mkpoker-base INTERFACE cxx_std_20)
-target_compile_options(mkpoker-base INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive- /std:c++latest>)
-target_compile_options(mkpoker-base INTERFACE $<$<CXX_COMPILER_ID:Clang>:-std=c++20 -stdlib=libc++ -Wall -Wextra -Wpedantic>)
-target_compile_options(mkpoker-base INTERFACE $<$<CXX_COMPILER_ID:GNU>:-std=c++20 -Wall -Wextra -Wpedantic>)
+add_library(mkpoker-mkp INTERFACE)
+add_library(mkpoker::mkp ALIAS mkpoker-mkp)
+target_include_directories(mkpoker-mkp INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
+target_include_directories(mkpoker-mkp SYSTEM INTERFACE $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include>)
+target_compile_features(mkpoker-mkp INTERFACE cxx_std_20)
+target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive- /std:c++latest>)
+target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -Wpedantic>)
+target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>)
 
 
-# additional stuff, execute only if this is the main project
+# tests etc., execute only if this is the main project
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 
     # build tests
@@ -40,12 +38,4 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     enable_testing()
     add_subdirectory(test)
 
-    # Docs only available if this is the main app
-    find_package(Doxygen)
-    if(Doxygen_FOUND)
-	#add_subdirectory(docs)
-	message(STATUS "Doxygen found, building docs")
-    else()
-	message(STATUS "Doxygen not found, not building docs")
-    endif()
 endif()
