--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
 
-project(mkpoker
+project(
+    mkpoker
     VERSION 0.1.0
     LANGUAGES CXX
-    DESCRIPTION "A Texas Holdem poker framework written in C++ 20.")
+    DESCRIPTION "A Texas Holdem poker framework written in C++ 20."
+)
 
 
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
@@ -13,25 +15,38 @@ if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
 endif()
 
 
-# configuration for dev, only executes if this is the main project
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-endif()
-
+# dependencies
+include(cmake/CPM.cmake)
+# PackageProject.cmake will be used to make our target installable
+CPMAddPackage(
+    NAME PackageProject.cmake
+    GITHUB_REPOSITORY TheLartians/PackageProject.cmake
+    VERSION 1.3
+)
 
 # base library, header only
-add_library(mkpoker-mkp INTERFACE)
-add_library(mkpoker::mkp ALIAS mkpoker-mkp)
-target_include_directories(mkpoker-mkp INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
-target_include_directories(mkpoker-mkp SYSTEM INTERFACE $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include>)
-target_compile_features(mkpoker-mkp INTERFACE cxx_std_20)
-target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive- /std:c++latest>)
-target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -Wpedantic>)
-target_compile_options(mkpoker-mkp INTERFACE $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>)
+add_library(mkpoker INTERFACE)
+add_library(mkpoker::mkp ALIAS mkpoker)
+target_include_directories(
+    mkpoker
+    INTERFACE
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
+)
+target_compile_features(mkpoker INTERFACE cxx_std_20)
+target_compile_options(mkpoker INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive- /std:c++latest>)
+target_compile_options(mkpoker INTERFACE $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -Wpedantic>)
+target_compile_options(mkpoker INTERFACE $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>)
 
 
 # tests etc., execute only if this is the main project
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+
+    # support folders
+    #set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+    # build examples
+    add_subdirectory(example)
 
     # build tests
     message(STATUS "Testing enabled")
@@ -39,3 +54,16 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     add_subdirectory(test)
 
 endif()
+
+
+# make installable target
+string(TOLOWER ${PROJECT_NAME}/version.h VERSION_HEADER_LOCATION)
+packageProject(
+    NAME ${PROJECT_NAME}
+    VERSION ${PROJECT_VERSION}
+    BINARY_DIR ${PROJECT_BINARY_DIR}
+    INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include
+    INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
+    VERSION_HEADER "${VERSION_HEADER_LOCATION}"
+    DEPENDENCIES ""
+)
