--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,19 +73,20 @@ jobs:
             cc: /usr/local/opt/llvm/bin/clang-12
             cxx: /usr/local/opt/llvm/bin/clang++
 
+          # exclude apple clange for the moment because of lacking lib features
           # apple clang 12
-          - 
-            name: "macos apple clang 12 Debug"
-            os: macos-latest
-            build_type: Debug
-            cc: clang
-            cxx: clang++
-          - 
-            name: "macos apple clang 12 Release"
-            os: macos-latest
-            build_type: Release
-            cc: clang
-            cxx: clang++
+          #- 
+          #  name: "macos apple clang 12 Debug"
+          #  os: macos-latest
+          #  build_type: Debug
+          #  cc: clang
+          #  cxx: clang++
+          #- 
+          #  name: "macos apple clang 12 Release"
+          #  os: macos-latest
+          #  build_type: Release
+          #  cc: clang
+          #  cxx: clang++
 
           # msvc
           - 
