--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,73 +19,74 @@ jobs:
           # gcc 10
           - 
             name: "ubuntu gcc 10 Debug"
-            os: ubuntu-20.04
+            os: ubuntu-latest
             build_type: Debug
             cc: gcc-10
             cxx: g++-10
             codecov: true
           - 
             name: "ubuntu gcc 10 Release"
-            os: ubuntu-20.04
+            os: ubuntu-latest
             build_type: Release
             cc: gcc-10
             cxx: g++-10
 
-          # clang 11 on ubuntu
+          # clang 12 on ubuntu
           - 
-            name: "ubuntu clang 11 Debug"
-            os: ubuntu-20.04
+            name: "ubuntu clang 12 Debug"
+            os: ubuntu-latest
             build_type: Debug
-            cc: clang-11
-            cxx: clang++-11
+            cc: clang-12
+            cxx: clang++-12
           - 
-            name: "ubuntu clang 11 Release"
-            os: ubuntu-20.04
+            name: "ubuntu clang 12 Release"
+            os: ubuntu-latest
             build_type: Release
-            cc: clang-11
-            cxx: clang++-11
+            cc: clang-12
+            cxx: clang++-12
           - 
-            name: "ubuntu clang 11 libcxx Debug"
-            os: ubuntu-20.04
+            name: "ubuntu clang 12 libcxx Debug"
+            os: ubuntu-latest
             build_type: Debug
-            cc: clang-11
-            cxx: clang++-11
+            cc: clang-12
+            cxx: clang++-12
             libcxx: true
           - 
-            name: "ubuntu clang 11 libcxx Release"
-            os: ubuntu-20.04
+            name: "ubuntu clang 12 libcxx Release"
+            os: ubuntu-latest
             build_type: Release
-            cc: clang-11
-            cxx: clang++-11
+            cc: clang-12
+            cxx: clang++-12
             libcxx: true
 
-          # clang 11 on macos
+          # clang 12 on macos
           - 
-            name: "macos clang 11 Debug"
-            os: macos-11.0
+            name: "macos clang 12 Debug"
+            os: macos-latest
             build_type: Debug
-            cc: /usr/local/opt/llvm/bin/clang-11
+            cc: /usr/local/opt/llvm/bin/clang-12
             cxx: /usr/local/opt/llvm/bin/clang++
           - 
-            name: "macos clang 11 Release"
-            os: macos-11.0
+            name: "macos clang 12 Release"
+            os: macos-latest
             build_type: Release
-            cc: /usr/local/opt/llvm/bin/clang-11
+            cc: /usr/local/opt/llvm/bin/clang-12
             cxx: /usr/local/opt/llvm/bin/clang++
 
+          # exclude apple clange for the moment because of lacking lib features
           # apple clang 12
-          - 
-            name: "macos apple clang 12 Debug"
-            os: macos-11.0
-            build_type: Debug
-            cc: clang
-            cxx: clang++
-          - 
-            name: "macos apple clang 12 Release"
-            os: macos-11.0
-            build_type: Release
-            cc: clang
-            cxx: clang++
+          #- 
+          #  name: "macos apple clang 12 Debug"
+          #  os: macos-latest
+          #  build_type: Debug
+          #  cc: clang
+          #  cxx: clang++
+          #- 
+          #  name: "macos apple clang 12 Release"
+          #  os: macos-latest
+          #  build_type: Release
+          #  cc: clang
+          #  cxx: clang++
 
           # msvc
           - 
@@ -120,10 +121,10 @@ jobs:
           echo "LIBCXX_INSTALL_TAG=$llvm_tag" >> $GITHUB_ENV
           echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
 
-      # install clang 11 and libc++ if necessary
+      # install clang 12 and libc++ if necessary
       - 
-        name: "install clang 11"
-        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-11')
+        name: "install clang 12"
+        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-12')
         working-directory: "${{ env.HOME }}"
         shell: bash
         run: |
@@ -211,7 +212,7 @@ jobs:
           ${{ env.MKP_MONO }}
 
       # at the moment, only msvc is multi config
-      # pass --config $build_type als arg
+      # pass --config $build_type as arg
       - 
         name: build
         shell: bash
