--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,12 @@ endif()
 
 # dependencies
 include(cmake/CPM.cmake)
+# until replace by std::format
+CPMAddPackage("gh:fmtlib/fmt#7.1.3")
+# gather all used licenses
+CPMAddPackage("gh:cpm-cmake/CPMLicenses.cmake@0.0.5")
 # PackageProject.cmake will be used to make our project installable
-CPMAddPackage(
-    NAME PackageProject.cmake
-    GITHUB_REPOSITORY TheLartians/PackageProject.cmake
-    VERSION 1.8.0
-)
+CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.8.0")
 
 
 # base library, header only
@@ -52,24 +52,31 @@ target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/perm
 
 # configure according to options, build examples, tests etc.
 if(MKPOKER_BUILD_FOR_DEV)
-    message(STATUS "Using strict compiler warnings enabled")
+    message(STATUS "mkpoker: using strict compiler warnings enabled")
     target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/W4>)
     target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -Wpedantic>)
     target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>)
 endif()
 if(MKPOKER_BUILD_EXAMPLES)
-    message(STATUS "Building samples enabled")
+    message(STATUS "mkpoker: building samples enabled")
     add_subdirectory(example)
 else()
-    message(STATUS "Building samples DISABLED")
+    message(STATUS "mkpoker: building samples DISABLED")
 endif()
 if(MKPOKER_BUILD_TESTS)
-    message(STATUS "Testing enabled")
+    message(STATUS "mkpoker: testing enabled")
     enable_testing()
     add_subdirectory(test)
 else()
-    message(STATUS "Testing DISABLED")
+    message(STATUS "mkpoker: testing DISABLED")
 endif()
+
+
+# create licenses file to include into the repository
+# assuming build directory `build`, create with `cmake --build build --target write-licenses`
+cpm_licenses_create_disclaimer_target(
+  write-licenses "${CMAKE_CURRENT_BINARY_DIR}/third_party.txt" "${CPM_PACKAGES}"
+)
 
 
 # make installable target
