--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
           llvm_tag=llvmorg-13.0.0
           echo ::set-output name=llmv-version::$llvm_tag
           echo "LIBCXX_INSTALL_TAG=$llvm_tag" >> $GITHUB_ENV
-          echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
+          echo "LIBCXX_INSTALL_PATH=`pwd`/local-2021-12" >> $GITHUB_ENV
 
       # install clang 13 and libc++ if necessary
       - 
@@ -140,7 +140,7 @@ jobs:
         id: cache-llvm
         with:
           path: "${{env.LIBCXX_INSTALL_PATH}}"
-          key: ${{runner.os}}-llvm000-${{ steps.init.outputs.llmv-version }}
+          key: ${{runner.os}}-${{ steps.init.outputs.llmv-version }}
       # if not cached, actually build stuff
       -
         name: "checkout llvm"
@@ -155,10 +155,10 @@ jobs:
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          echo setup gcc 11 to compile clang 13
-          sudo apt-get install -y gcc-11 g++-11
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 \
-            --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
+          #echo setup gcc 11 to compile clang 13
+          #sudo apt-get install -y gcc-11 g++-11
+          #sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 \
+          #  --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
 
           echo source from checkout action should be here...
           ls -lh
@@ -168,8 +168,8 @@ jobs:
           cmake \
             -S llvm \
             -B build \
-            -D CMAKE_C_COMPILER=gcc-11 \
-            -D CMAKE_CXX_COMPILER=g++-11 \
+            -D CMAKE_C_COMPILER=gcc-10 \
+            -D CMAKE_CXX_COMPILER=g++-10 \
             -D LLVM_ENABLE_PROJECTS='libcxx;libcxxabi' \
             -D "CMAKE_INSTALL_PREFIX=${{ env.LIBCXX_INSTALL_PATH }}" \
             -D CMAKE_BUILD_TYPE=Release
