--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
 
 jobs: 
   build: 
-    name: "${{ matrix.cfg.name }}"
-    runs-on: "${{ matrix.cfg.os }}"
+    name: "${{matrix.cfg.name}}"
+    runs-on: "${{matrix.cfg.os}}"
     strategy: 
       fail-fast: false
       matrix: 
@@ -119,13 +119,13 @@ jobs:
           llvm_tag=llvmorg-13.0.0
           echo ::set-output name=llmv-version::$llvm_tag
           echo "LIBCXX_INSTALL_TAG=$llvm_tag" >> $GITHUB_ENV
-          echo "LIBCXX_INSTALL_PATH=`pwd`/local-2021-12" >> $GITHUB_ENV
+          echo "LIBCXX_INSTALL_PATH=`pwd`/local" >> $GITHUB_ENV
 
       # install clang 13 and libc++ if necessary
       - 
         name: "install clang 13"
         if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-13')
-        working-directory: "${{ env.HOME }}"
+        working-directory: "${{env.HOME}}"
         shell: bash
         run: |
           wget https://apt.llvm.org/llvm.sh
@@ -140,7 +140,8 @@ jobs:
         id: cache-llvm
         with:
           path: "${{env.LIBCXX_INSTALL_PATH}}"
-          key: ${{runner.os}}-${{ steps.init.outputs.llmv-version }}
+          # we always build as Release, so don't make a separate cache entry for debug
+          key: ${{runner.os}}-${{matrix.cfg.os}}-Release-${{steps.init.outputs.llmv-version}}
       # if not cached, actually build stuff
       -
         name: "checkout llvm"
@@ -148,31 +149,29 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: llvm/llvm-project
-          ref: ${{ env.LIBCXX_INSTALL_TAG }}
+          ref: ${{env.LIBCXX_INSTALL_TAG}}
           path: llvm-project
       - 
         name: "install libcxx"
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          #echo setup gcc 11 to compile clang 13
-          #sudo apt-get install -y gcc-11 g++-11
-          #sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 \
-          #  --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
-
           echo source from checkout action should be here...
           ls -lh
           cd llvm-project
 
           echo building libcxx from source...
+          # workaround for cmake 3.22 breaking libc++ install
+          # -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
           cmake \
             -S llvm \
             -B build \
             -D CMAKE_C_COMPILER=gcc-10 \
             -D CMAKE_CXX_COMPILER=g++-10 \
             -D LLVM_ENABLE_PROJECTS='libcxx;libcxxabi' \
-            -D "CMAKE_INSTALL_PREFIX=${{ env.LIBCXX_INSTALL_PATH }}" \
-            -D CMAKE_BUILD_TYPE=Release
+            -D "CMAKE_INSTALL_PREFIX=${{env.LIBCXX_INSTALL_PATH}}" \
+            -D CMAKE_BUILD_TYPE=Release \
+            -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
           cmake --build build --target install-cxx
           cmake --build build --target install-cxxabi
 
@@ -212,9 +211,9 @@ jobs:
           -S . \
           -B build \
           -D MKPOKER_BUILD_TESTS=ON -D MKPOKER_BUILD_EXAMPLES=ON -D MKPOKER_BUILD_FOR_DEV=ON \
-          ${{ env.CXX_ARGS }} \
-          ${{ env.LDD_ARGS }} \
-          ${{ env.MKP_MONO }}
+          ${{env.CXX_ARGS}} \
+          ${{env.LDD_ARGS}} \
+          ${{env.MKP_MONO}}
 
       # at the moment, only msvc is multi config
       # pass --config $build_type as arg
@@ -224,7 +223,7 @@ jobs:
         run: |
           cmake \
           --build build \
-          ${{ env.MKP_MULTI }} \
+          ${{env.MKP_MULTI}} \
           -j1 -v
 
       # run tests with very verbose output
@@ -241,5 +240,5 @@ jobs:
         if: matrix.cfg.codecov
         shell: bash
         env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         run: "bash <(curl -s https://codecov.io/bash) -x gcov-10"
