--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
 
 jobs: 
   build: 
-    name: "${{ matrix.cfg.name }}"
-    runs-on: "${{ matrix.cfg.os }}"
+    name: "${{matrix.cfg.name}}"
+    runs-on: "${{matrix.cfg.os}}"
     strategy: 
       fail-fast: false
       matrix: 
@@ -73,20 +73,19 @@ jobs:
             cc: /usr/local/opt/llvm/bin/clang-13
             cxx: /usr/local/opt/llvm/bin/clang++
 
-          # exclude apple clange for the moment because of lacking lib features
-          # apple clang 12
-          #- 
-          #  name: "macos apple clang 12 Debug"
-          #  os: macos-latest
-          #  build_type: Debug
-          #  cc: clang
-          #  cxx: clang++
-          #- 
-          #  name: "macos apple clang 12 Release"
-          #  os: macos-latest
-          #  build_type: Release
-          #  cc: clang
-          #  cxx: clang++
+          # apple clang 13
+          - 
+            name: "macos apple clang 13 Debug"
+            os: macos-latest
+            build_type: Debug
+            cc: clang
+            cxx: clang++
+          - 
+            name: "macos apple clang 13 Release"
+            os: macos-latest
+            build_type: Release
+            cc: clang
+            cxx: clang++
 
           # msvc
           - 
@@ -125,7 +124,7 @@ jobs:
       - 
         name: "install clang 13"
         if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'clang++-13')
-        working-directory: "${{ env.HOME }}"
+        working-directory: "${{env.HOME}}"
         shell: bash
         run: |
           wget https://apt.llvm.org/llvm.sh
@@ -140,7 +139,9 @@ jobs:
         id: cache-llvm
         with:
           path: "${{env.LIBCXX_INSTALL_PATH}}"
-          key: ${{runner.os}}-llvm000-${{ steps.init.outputs.llmv-version }}
+          # we always build as Release, so don't make a separate cache entry for debug
+          key: ${{runner.os}}-${{matrix.cfg.os}}-Release-${{steps.init.outputs.llmv-version}}
+
       # if not cached, actually build stuff
       -
         name: "checkout llvm"
@@ -148,10 +149,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: llvm/llvm-project
-          ref: ${{ env.LIBCXX_INSTALL_TAG }}
+          ref: ${{env.LIBCXX_INSTALL_TAG}}
           path: llvm-project
       - 
-        name: "install libcxx"
+        name: "install llvm libc++"
         if: matrix.cfg.libcxx && steps.cache-llvm.outputs.cache-hit != 'true'
         shell: bash
         run: |
@@ -160,14 +161,17 @@ jobs:
           cd llvm-project
 
           echo building libcxx from source...
+          # workaround for cmake 3.22 breaking libc++ install:
+          # -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
           cmake \
             -S llvm \
             -B build \
             -D CMAKE_C_COMPILER=gcc-10 \
             -D CMAKE_CXX_COMPILER=g++-10 \
             -D LLVM_ENABLE_PROJECTS='libcxx;libcxxabi' \
-            -D "CMAKE_INSTALL_PREFIX=${{ env.LIBCXX_INSTALL_PATH }}" \
-            -D CMAKE_BUILD_TYPE=Release
+            -D "CMAKE_INSTALL_PREFIX=${{env.LIBCXX_INSTALL_PATH}}" \
+            -D CMAKE_BUILD_TYPE=Release \
+            -D CMAKE_BUILD_WITH_INSTALL_RPATH=ON
           cmake --build build --target install-cxx
           cmake --build build --target install-cxxabi
 
@@ -197,8 +201,7 @@ jobs:
             echo "MKP_MULTI=--config ${{matrix.cfg.build_type}}" >> $GITHUB_ENV
           fi
 
-      # at the moment, only msvc is multi config
-      # other builds need the build_type set during config
+      # at the moment non-msvc builds are 'mono config' and need the build_type set during config
       - 
         name: configure
         shell: bash
@@ -207,19 +210,18 @@ jobs:
           -S . \
           -B build \
           -D MKPOKER_BUILD_TESTS=ON -D MKPOKER_BUILD_EXAMPLES=ON -D MKPOKER_BUILD_FOR_DEV=ON \
-          ${{ env.CXX_ARGS }} \
-          ${{ env.LDD_ARGS }} \
-          ${{ env.MKP_MONO }}
+          ${{env.CXX_ARGS}} \
+          ${{env.LDD_ARGS}} \
+          ${{env.MKP_MONO}}
 
-      # at the moment, only msvc is multi config
-      # pass --config $build_type as arg
+      # msvc is 'multi config' so we pass --config $build_type as arg here
       - 
         name: build
         shell: bash
         run: |
           cmake \
           --build build \
-          ${{ env.MKP_MULTI }} \
+          ${{env.MKP_MULTI}} \
           -j1 -v
 
       # run tests with very verbose output
@@ -236,5 +238,5 @@ jobs:
         if: matrix.cfg.codecov
         shell: bash
         env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         run: "bash <(curl -s https://codecov.io/bash) -x gcov-10"
