--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -11,11 +11,15 @@ target_link_libraries(demo_gamestate PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAM
 add_executable(demo_game_w_cards demo_game_w_cards.cpp)
 target_link_libraries(demo_game_w_cards PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAME})
 
+# demo equity calculator
+add_executable(demo_equity_calc demo_equity_calc.cpp)
+target_link_libraries(demo_equity_calc PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAME})
+
 # demo cfr
 find_package(Threads REQUIRED)
 add_executable(demo_cfr demo_cfr.cpp)
 target_link_libraries(demo_cfr PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAME} Threads::Threads)
 
-# test print hand history
+# demo print hand history
 add_executable(demo_print_hh demo_print_hh.cpp)
-target_link_libraries(demo_print_hh PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAME} fmt::fmt)
+target_link_libraries(demo_print_hh PRIVATE ${PROJECT_NAMESPACE}::${PROJECT_NAME})
