--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,16 @@ bld/
 [Ll]ogs/
 build/
 
-# Visual Studio 2015/2017 cache/options directory
+# Visual Studio cache/options directory
 .vs/
 out/
 CMakeSettings.json
-# Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/c_cpp_properties.json
 
-# Visual Studio 2017 auto generated files
+# Visual Studio auto generated files
 Generated\ Files/
 
 # MSTest test Results
