--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,13 +62,13 @@ jobs:
           # clang 14 on macos
           - 
             name: "macos clang 14 Debug"
-            os: macos-latest
+            os: macos-12
             build_type: Debug
             cc: /usr/local/opt/llvm/bin/clang-14
             cxx: /usr/local/opt/llvm/bin/clang++
           - 
             name: "macos clang 14 Release"
-            os: macos-latest
+            os: macos-12
             build_type: Release
             cc: /usr/local/opt/llvm/bin/clang-14
             cxx: /usr/local/opt/llvm/bin/clang++
@@ -76,13 +76,13 @@ jobs:
           # apple clang 14
           - 
             name: "macos apple clang 14 Debug"
-            os: macos-latest
+            os: macos-12
             build_type: Debug
             cc: clang
             cxx: clang++
           - 
             name: "macos apple clang 14 Release"
-            os: macos-latest
+            os: macos-12
             build_type: Release
             cc: clang
             cxx: clang++
@@ -182,7 +182,7 @@ jobs:
         run: |
           echo "CC=${{matrix.cfg.cc}}" >> $GITHUB_ENV
           echo "CXX=${{matrix.cfg.cxx}}" >> $GITHUB_ENV
-          if [[  ${{matrix.cfg.os}} != 'windows-latest' ]]; then
+          if [[ "${{matrix.cfg.os}}" != "windows-latest" ]]; then
 
             if [[ "x${{matrix.cfg.codecov}}" == "xtrue" ]]; then
               cov=" -D MKPOKER_ENABLE_CODE_COVERAGE=1"
@@ -193,6 +193,7 @@ jobs:
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem ${{env.LIBCXX_INSTALL_PATH}}/include/c++/v1 -Wno-unused-command-line-argument\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L ${{env.LIBCXX_INSTALL_PATH}}/lib -Wl,-rpath,${{env.LIBCXX_INSTALL_PATH}}/lib -lc++abi\"" >> $GITHUB_ENV
             elif [[  ${{matrix.cfg.os}} == macos-* ]]; then
+              ls -l /usr/local/opt/llvm/bin/
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS=-stdlib=libc++ -nostdinc++ -cxx-isystem /usr/local/opt/llvm/include/c++/v1\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS=-L /usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib -lc++abi\"" >> $GITHUB_ENV
             fi
